@@ -123,7 +123,7 @@ class PanelizerTermTest extends PanelizerTestHelper {
   function testTermPanelizeIt() {
     $view_mode = 'default';
     $view_mode_label = t('Default');
-    $this->togglePanelizer('taxonomy_term', $this->vocabulary->machine_name, 1, 0, 0, $view_mode);
+    $this->togglePanelizer('taxonomy_term', $this->vocabulary->machine_name, $view_mode, 1, 0, 0);
     $term = $this->createTestTerm();
 
     // Check that the view mode can be panelized.
@@ -154,7 +154,7 @@ class PanelizerTermTest extends PanelizerTestHelper {
    */
   function testTermPanelsDefault() {
     $view_mode = 'default';
-    $this->togglePanelizer('taxonomy_term', $this->vocabulary->machine_name, 1, 1, 0, $view_mode);
+    $this->togglePanelizer('taxonomy_term', $this->vocabulary->machine_name, $view_mode, 1, 1, 0);
     $term = $this->createTestTerm();
 
     // Verify that the view mode has a default panel.
