@@ -112,6 +112,8 @@ By DamienMcKenna: Updated the README.txt note about Pathauto.
   panelizer-view-mode.tpl.php.
 #2709487 by DamienMcKenna: Fixed link paths in contextual menus.
 #2600178 by joelstein: Some $cache_key values may only have two parts.
+#2472519 by joelstein, DamienMcKenna: View mode substitution wasn't working
+  correctly.
 
 
 Panelizer 7.x-3.2-beta1, 2015-02-02
